--- a/app/template.html
+++ b/app/template.html
@@ -11,6 +11,7 @@
     <script src="/app/libs/angular/angular.min.js"></script>
     <script src="/app/libs/angular-route/angular-route.js"></script>
     <script src="/app/libs/angular-cookies/angular-cookies.min.js"></script>
+    <script src="/app/libs/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="/app/libs/moment/min/moment.min.js"></script>
     <script src="/app/libs/lodash/dist/lodash.min.js"></script>
     <script src="/app/app.js"></script>
