--- a/app/template.html
+++ b/app/template.html
@@ -16,6 +16,8 @@
     <script src="/app/libs/lodash/dist/lodash.min.js"></script>
     <script src="/app/app.js"></script>
     <script src="/app/routes.js"></script>
+    <script src="/app/filters/to-html.js"></script>
+    <script src="/app/filters/moment.js"></script>
     <script src="/app/views/home.js"></script>
     <script src="/app/views/chat.js"></script>
     <script>
