--- a/app/template.html
+++ b/app/template.html
@@ -22,8 +22,8 @@
     <script src="/app/libs/lodash/dist/lodash.min.js"></script>
     <script src="/app/app.js"></script>
     <script src="/app/routes.js"></script>
-    <script src="/app/filters/to-html.js"></script>
     <script src="/app/filters/moment.js"></script>
+    <script src="/app/directives/bubble.js"></script>
     <script src="/app/services/auth.js"></script>
     <script src="/app/views/home.js"></script>
     <script src="/app/views/chat.js"></script>
